# Sc2LadderServer

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  LadderBots.json  LadderConfig.cpp  LadderManager.conf  LadderManager.cpp  LadderManager.h  LadderManager.sln  LadderManager.vcxproj  MatchupList.cpp  MatchupList.h  README.md  Tests.cpp  Tests.h  ToolsLinux.cpp  ToolsWindows.cpp  Types.h  Util.cpp  Util.h  cmake_vs2019.bat
.travis/: before-install.sh  build.sh  install.sh
DebugBot/: DebugBot.vcxproj  DebugBot.vcxproj.filters  DebugBotMain.cpp
LMHumanBot/: HumanBot.cpp  HumanBot.h  LadderInterface.h
LMProxyBot/: ProxyBot.cpp  ProxyBot.h
curl/lib/: libcurl.lib  libcurl_debug.exp  libcurl_debug.lib
docs/: draw.io_LadderServerArchitecture.xml
example_configs/: LadderBots.json  LadderManager.conf  LadderManager.json  maplist  matchuplist
hacks/: civetweb_compilation_fix.patch
src/: CMakeLists.txt  LadderManager.cpp  LadderManager.h  MatchupList.cpp  Tools.h  ToolsLinux.cpp  ToolsUnix.cpp  ToolsWindows.cpp  Types.h
src/core/: LadderConfig.h  LadderManager.cpp  LadderManager.h
src/sc2laddercore/: AgentsConfig.cpp  AgentsConfig.h  HumanGame.cpp  HumanGame.h  LadderConfig.cpp  LadderConfig.h  LadderGame.cpp  LadderGame.h  LadderManager.cpp  LadderManager.h  LegacyLadderConfig.cpp  LegacyLadderConfig.h  MatchupList.cpp  MatchupList.h  Proxy.cpp  Proxy.h  Tools.h  ToolsCommon.cpp  ToolsUnix.cpp  ToolsWindows.cpp  Types.h  md5.cpp  md5.h
src/sc2ladderserver/: main.cpp
test_configs/TestMatch_Bot1Eliminated/: LadderBots.json  LadderManager.conf  maplist
tests/: CMakeLists.txt
tests/debugbot/: CMakeLists.txt  DebugBotMain.cpp  LadderInterface.h
tests/integration/: CMakeLists.txt  IntegrationTests.cpp
tests/integration/integration_test_configs/TestMatch_Bot1Eliminated/: LadderBots.json  LadderManager.conf  LadderManager.json
tests/tests/: CMakeLists.txt  Tests.cpp
tests/tests/test_configs/TestMatch_Bot1Eliminated/: LadderBots.json  LadderManager.conf  maplist
tests/unit/: CMakeLists.txt  UnitTests.cpp
